[package]
name = "simple-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7" }
dotenvy = "0.15"
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
  "trace",
  "compression-full",
  "timeout",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
