[package]
name = "simple-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7" }
axum-auth = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
rama = { git = "https://github.com/plabayo/rama", branch = "main" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "trace",
    "compression-full",
    "timeout",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
